fix android flex oddness - material height fixed caused overlap

--- a/src/app/components/task-list/task-list.component.css
+++ b/src/app/components/task-list/task-list.component.css
@@ -13,9 +13,18 @@
   bottom: 0;
 }
 
+.hide {
+  display: none;
+}
+
 .tiny-text{
   text-align: center;
   font-size: 12px;
   color: #6b6b6b;
   width: 100%;
+}
+
+::ng-deep .mat-list .mat-list-item .mat-list-item-content {
+    min-height: 48px;
+    height: auto !important;
 }
